[package]
name = "war-fog-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
piston = "0.55.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.84.0"
pistoncore-glutin_window = "0.72.0"
rand = "0.8.5"
